gccida/g1/finish_enum
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6468:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6469:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6471:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6477:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6492:25: error: expected expression
elements = ( tree_node *)*( &global_trees + 11); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6492:14: error: use of undeclared identifier 'tree_node'
elements = ( tree_node *)*( &global_trees + 11); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6493:19: error: expected expression
v5 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/c-decl.c:6493:8: error: use of undeclared identifier 'tree_node'
v5 = ( tree_node *)*( &global_trees + 11); 
       ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_enum/src/obj/c-decl.o] Error 1
